export const snapshot = {};

snapshot[`parcelCSS plugin 1`] = `4`;

snapshot[`parcelCSS plugin 2`] = `
{
  formats: [
    {
      engine: true,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: true,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engine: false,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      ext: ".json",
    },
    {
      engine: true,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engine: true,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engine: true,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      asset: true,
      engine: false,
      ext: ".css",
      pageLoader: [AsyncFunction: text],
    },
  ],
}
`;

snapshot[`parcelCSS plugin 3`] = `
[
]
`;

snapshot[`parcelCSS plugin 4`] = `
{
  content: "(removed for testing)",
  data: {
    content: "(removed for testing)",
    page: undefined,
    tags: [
    ],
    url: "/index.css.map",
  },
  dest: {
    ext: ".map",
    path: "/index.css",
  },
  src: {
    ext: undefined,
    path: "",
    remote: undefined,
  },
}
`;

snapshot[`parcelCSS plugin 5`] = `
{
  content: "(removed for testing)",
  data: {
    content: "(removed for testing)",
    page: undefined,
    tags: [
    ],
    url: "/text.css.map",
  },
  dest: {
    ext: ".map",
    path: "/text.css",
  },
  src: {
    ext: undefined,
    path: "",
    remote: undefined,
  },
}
`;

snapshot[`parcelCSS plugin 6`] = `
{
  content: '@import "variables.css";@import "./text.css";
/*# sourceMappingURL=./index.css.map */',
  data: {
    content: '@import "variables.css";
@import "./text.css";
',
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".css",
    path: "/index",
    remote: undefined,
  },
}
`;

snapshot[`parcelCSS plugin 7`] = `
{
  content: ".text{font-family:var(--font-family)}.text p{color:var(--color);box-shadow:0 0 .5em var(--background);-webkit-backface-visibility:hidden;backface-visibility:hidden}
/*# sourceMappingURL=./text.css.map */",
  data: {
    content: ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/text.css",
  },
  dest: {
    ext: ".css",
    path: "/text",
  },
  src: {
    ext: ".css",
    path: "/text",
    remote: undefined,
  },
}
`;
